package dmGameObject;

option java_package = "com.dynamo.gamesys.proto";
option java_outer_classname = "GameObject";
// option ddf_java_package = "com.dynamo.gamesys.ddf";

message GameObjectPrototypeDesc
{
    required string Name = 1;
    required string Script = 2;
    repeated string Components = 3;
}
